--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,18 @@ android {
 }
 
 dependencies {
+    // our
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "com.squareup.okhttp3:okhttp:3.12.1"
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    // Android
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
