--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.locationapplication"
+        applicationId 'idf.lotem.locationapplication'
         minSdk 19
         targetSdk 31
         versionCode 1
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "com.squareup.okhttp3:okhttp:3.12.1"
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 
     // Android
     implementation 'androidx.core:core-ktx:1.7.0'
